--- a/english.html
+++ b/english.html
@@ -249,17 +249,27 @@ Error message and password prompt
 
 <li>$:/user/styles</li>
 
+<li>Alan Ball</li>
+
 <li>ayala malach pines</li>
 
+<li>Berry Sakharof</li>
+
 <li>bg</li>
+
+<li>Bjork</li>
 
 <li>Coen Sisters</li>
 
 <li>Elementary</li>
 
+<li>John Irving</li>
+
 <li>logo-bg</li>
 
 <li>Radio epgb</li>
+
+<li>soul</li>
 
 </ul>
 </p>
@@ -8120,7 +8130,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[ayala malach pines]]" title="$:/StoryList">
+<div list="[[John Irving]] [[Berry Sakharof]] [[Coen Sisters]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -8286,9 +8296,21 @@ a.translation:hover { text-decoration: underline }
 .tootdiv a:hover {text-decoration: none; color: #f88}
 tootdiv a:visited {text-decoration: none; color: #700}</pre>
 </div>
+<div created="20191113140946887" modified="20191113143105603" tags="[[outer sisters]] films tv [[tv series]]" title="Alan Ball">
+<pre>[img[pictures/alan-ball.jpg]]
+
+!!![[Gura]]:
+
+I made this drawing from that picture of Alan Ball.
+Only two weeks ago I became aware of his existence, because only two weeks ago I started watching SIX FEET UNDER which I enjoyed very much, and two days after I finished UNDER, I moved on to TRUE BLOOD which is an abnormal entertainment.  Now I watch a chapter of HERE AND NOW every week and it keeps getting interesting. Watch the sweetheart.
+
+
+ &lt;&lt;heblink [[אלן בול]]&gt;&gt;
+
+</pre>
+</div>
 <div created="20191113130654313" modified="20191113131340124" tags="" title="ayala malach pines">
-<pre>
-[img[pictures/ayala-malach-pines.jpg]]
+<pre>[img[pictures/ayala-malach-pines.jpg]]
 
 !!![[yoyo]]:
 
@@ -8299,10 +8321,42 @@ A soul was born by her inspiration. May she rest in peace.
 
  &lt;&lt;heblink [[איילה מלאך]]&gt;&gt;</pre>
 </div>
+<div created="20191113143329168" modified="20191113144209430" tags="music [[outer sisters]]" title="Berry Sakharof">
+<pre>
+[img[pictures/Berry-Sakharof.jpg]]
+
+Yoyo:
+This is Berry, who was a prince that mostly played and became a king who wrote about how we sat near the aspirin river and composed Ibn Gabirol and sang Meir Ariel and no further words.
+
+
+ &lt;&lt;heblink [[ברי סחרוף]]&gt;&gt;
+ 
+</pre>
+</div>
 <div _canonical_uri="pictures/bjVmMLrT1A6cNJ2g.jpg" created="20161024112200319" modified="20170119202336098" tags="" title="bg" type="image/jpeg">
 <pre></pre>
 </div>
-<div created="20180915085721246" modified="20191113131045494" tags="[[Monkeys with car keys]] [[outer sisters]]" title="Coen Sisters">
+<div created="20191113141855567" modified="20191113143521142" tags="music [[outer sisters]]" title="Bjork">
+<pre>
+[img[pictures/bjork.jpg]]
+
+!!![[Russell]]:
+
+Bjork is so cool for so many reasons. Gura likes this album very much.
+I chose to put this here. I like the song and I like the video.
+Emotional landscapes
+They puzzle me
+The riddles get solved
+And you push me up to this
+State of emergency
+How beautiful to be!
+State of emergency
+Is where I want to be
+
+
+ &lt;&lt;heblink [[ביורק]]&gt;&gt;</pre>
+</div>
+<div created="20180915085721246" modified="20191113144128621" tags="[[Monkeys with car keys]] [[outer sisters]]" title="Coen Sisters">
 <pre>[img[pictures/coen-sisters.jpg]]
 
 !!![[yoyo]]:
@@ -8327,6 +8381,17 @@ Be good.
 Sherlock, in the Jonny Lee Miller version, watches seven screens at the same time, as his gaze is fixated on an imaginary spot on top of and the center of the screens, so that he practically sees all of them, and if something unusual pops up, he freezes the picture and knows that there's something in it. Sweet Watson completes his words. In the next cut, they'll talk about it with Marcus and Gregson, and the mystery is solved or will be solved really soon. It's a super-fun series.
 &lt;&lt;heblink [[אלמנטרי]]&gt;&gt;</pre>
 </div>
+<div created="20191113143908637" modified="20191113144254373" tags="[[outer sisters]] films" title="John Irving">
+<pre>
+[img[pictures/john-irving.jpg]]
+
+!!![[Gura]]:
+
+John Irving is the soul writer of Yoyo, and he stands in one line as an outer sister with the Coen brothers.
+
+ &lt;&lt;heblink [[ג'ון אירווינג]]&gt;&gt;
+</pre>
+</div>
 <div _canonical_uri="pictures/newbg-dark.jpg" created="20170607193119061" modified="20170607230143664" tags="" title="logo-bg" type="image/jpeg">
 <pre></pre>
 </div>
@@ -8338,6 +8403,19 @@ Sherlock, in the Jonny Lee Miller version, watches seven screens at the same tim
 
 
 &lt;&lt;heblink [[רדיו epgb]]&gt;&gt;</pre>
+</div>
+<div created="20191113140141218" modified="20191113141156199" tags="Metafiction" title="soul">
+<pre>[img[pictures/neshama.jpg]]
+
+!!![[soul]]:
+
+
+I died few years ago, and after my death I realized, that for now, this is the living space of my soul. I can't fly any higher to my original region, and I'll have to be born again on earth.
+I had a certain choosing option, and I've asked to be born again only after the end of the next world war. My request was approved, and meanwhile I help souls who don't want to be born again in this world, to find an optimal place to be born. I also serve as a substitute guarding angel, &quot;Raphael&quot; type. 
+In my last metamorphosis I was a therapist, and it is my natural tendency. I had a wonderful metamorphosis full of greatness. Great parents, loving family, wonderful children, the love of a man, a professional success. I was very &quot;okish&quot;. One thing that wasn't really there- a release. I restrained, I held back. I was cautious. It was easy for me, because I believed in my deeds and I was very diligent. On account of these, my next reform is freedom and faith- it's not a simple metamorphosis, but it's a releasing one.
+
+
+ &lt;&lt;heblink [[נשמה]]&gt;&gt;</pre>
 </div>
 
 </div>
