--- a/index.html
+++ b/index.html
@@ -253,6 +253,12 @@ Error message and password prompt
 
 <li>blue-marble-hood</li>
 
+<li>Draft of 'אלן בול'</li>
+
+<li>Draft of 'ביורק'</li>
+
+<li>Draft of 'נשמה'</li>
+
 <li>English</li>
 
 <li>HH</li>
@@ -9163,7 +9169,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[איילה מלאך פיינס]] [[האחיות כהן]]" title="$:/StoryList">
+<div list="[[ג'ון אירווינג]] [[ברי סחרוף]] [[Draft of 'ביורק']] [[Draft of 'אלן בול']] [[Draft of 'נשמה']] [[איילה מלאך פיינס]] [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9183,7 +9189,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20191113131302156" title="$:/temp/search">
+<div created="20161023184814872" modified="20191113144310149" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -9349,6 +9355,69 @@ tootdiv a:visited {text-decoration: none; color: #700}</pre>
 אנו שתינו נרגשות - זורקות כפפה על פני המים הגלובליים, ומציעות את הקמת קהילת [[בלו-מארבל-הוד|https://www.youtube.com/watch?v=Hp7OrYaXgb8]], כהתחלה של [[גוף גלובלי|imagine]], אליה יוכלו אנשים ללא הבדלי דת גזע או מגדר לחבור, באם יעמדו בתנאי קבלה שיקבעו. כמו כן, במדינות שיכריזו על עצמן כ-blue marble friendly, וכחלק מהסכמים עם שני הצדדים, יוכלו אנשי המארבל לחיות חיים מלאים.
 
 הרעיון לבלו מארבל הוא המשך למחשבות של אירי על [[הכפר|גלות]].
+</pre>
+</div>
+<div created="20180218104549044" draft.of="אלן בול" draft.title="אלן בול" modified="20191113143631367" tags="[[אחיות חוץ]] סרטים סדרות טלוויזיה" title="Draft of 'אלן בול'">
+<pre>[img[pictures/alan-ball.jpg]]
+
+!!![[גורה]]:
+
+את הציור  עשיתי מהתמונה [[הזו|https://www.npr.org/sections/monkeysee/2012/08/25/160004142/alan-ball-on-leaving-true-blood-behind]] של [[אלן בול|http://www.imdb.com/name/nm0050332/?ref_=tt_ov_wr]].
+
+רק לפני שבועיים התוודעתי לקיומו, כי רק לפני שבועיים ראיתי את [[עמוק באדמה]] ממנה כל כך נהניתי, ויומיים אחרי שסיימתי את עמוק, עברתי [[לדם אמיתי|דם אמיתי]] שהיא בידור לא נורמלי. עכשיו אני רואה מידי שבוע פרק של [[כאן ועכשיו|http://www.imdb.com/title/tt5923012/]] וזה הולך ונהיה מעניין. [[ראו את הפשוש|https://www.youtube.com/watch?v=hPhhF-NbUvw]].
+
+&lt;&lt;englink [[alan ball]]&gt;&gt;</pre>
+</div>
+<div created="20170623150317093" draft.of="ביורק" draft.title="ביורק" modified="20191113144331016" tags="[[אחיות חוץ]] מוזיקה" title="Draft of 'ביורק'">
+<pre>[img[pictures/bjork.jpg]]
+
+!!![[ראשל]]:
+
+[[ביורק|https://he.wikipedia.org/wiki/%D7%91%D7%99%D7%95%D7%A8%D7%A7]] היא ממש מגניבה מכל כך הרבה בחינות. את [[האלבום הזה|https://www.youtube.com/watch?v=1iW8hvcIAJQ]], גורה מאד אוהבת.
+
+אני בחרתי לשים כאן עכשיו את [[זה|https://www.youtube.com/watch?v=3ahhieWx7vc]]. אוהבת את השיר ואוהבת את [[הוידאו|מישל גונדרי]].
+
+
+
+Emotional landscapes
+
+They puzzle me
+
+The riddle gets solved
+
+And you push me up to this
+
+State of emergency
+
+How beautiful to be!
+
+State of emergency
+
+Is where I want to be
+
+&lt;&lt;englink [[Bjork]]&gt;&gt;
+</pre>
+</div>
+<div created="20170914191116661" draft.of="נשמה" draft.title="נשמה" modified="20191113141713868" tags="[[מטא בדיון]]" title="Draft of 'נשמה'">
+<pre>[img[pictures/neshama.jpg]]
+
+!!![[נשמה]]:
+
+נפטרתי  לפני  מספר שנים, ולאחר מותי הבנתי, שלעת עתה, זהו מרחב המחייה של נשמתי. לא אוכל להגביה עוף אל מחוזות המקור שלי, ואף אצטרך להיוולד שוב בארץ. 
+
+הייתה לי אפשרות בחירה מסויימת, וביקשתי להיוולד רק אחרי שתסתיים מלחמת העולם הבאה. בקשתי אושרה, ובינתיים אני מסייעת לנשמות שלא רוצות לבוא שוב לעולם הזה, למצוא מקום מיטבי להיוולד בו. כמו כן אני משמשת, כמלאך שומר מחליף מסוג רפאל.
+
+בגלגול האחרון שלי הייתי מטפלת, וזו הנטייה הטבעית שלי. היה לי גלגול נהדר ומלא בכל טוב. הורים נהדרים, משפחה אוהבת, ילדים נפלאים, אהבת גבר, הצלחה מקצועית. הייתי נורא &quot;בסדרית&quot;. דבר אחד לא היה שם ממש - שחרור. אחזתי, שמרתי. הייתי זהירה ומדודה. היה לי קל, כי האמנתי במעשי והייתי חרוצה מאד. בשל אלה, התיקון הבא שלי הוא שחרור ואמונה - וזה גלגול לא פשוט, אך משחרר.
+
+
+
+
+
+
+&lt;&lt;englink [[נשמה]]&gt;&gt;
+
+
+
 </pre>
 </div>
 <div created="20161024110225652" modified="20161024125352292" tags="LTR" title="English">
@@ -10281,7 +10350,7 @@ well,
 [[שרלוק|https://www.imdb.com/title/tt2191671/]] בגרסת [[ג'וני לי מילר|https://www.imdb.com/name/nm0001538/?ref_=tt_cl_t1]], צופה בשבעה מסכים בו&quot;ז, כשמבטו מונח על נקודה דמיונית מעל ובמרכז המסכים, כך שהוא למעשה רואה את כולם, ובאם דבר מה חריג קופץ לעיניו, הוא עוצר את התמונה, ויודע שכאן יש דבר. [[ווטסון|https://www.imdb.com/name/nm0005154/?ref_=tt_cl_t2]] המתוקה משלימה את מילותיו. בקאט הבא הם ידברו על זה עם [[מרקוס|https://www.imdb.com/name/nm3586347/?ref_=tt_cl_t3]] [[וגרגסון|https://www.imdb.com/name/nm0001644/?ref_=tt_cl_t4]], והתעלומה נפתרת או תיפתר ממש בקרוב. סידרה של כייף ליגה.
 &lt;&lt;englink [[Elementary]]&gt;&gt;</pre>
 </div>
-<div created="20180218104549044" modified="20190310131038803" tags="[[אחיות חוץ]] סרטים סדרות טלוויזיה" title="אלן בול">
+<div created="20180218104549044" modified="20191113142853822" tags="[[אחיות חוץ]] סרטים סדרות טלוויזיה" title="אלן בול">
 <pre>[img[pictures/alan-ball.jpg]]
 
 !!![[גורה]]:
@@ -10289,7 +10358,8 @@ well,
 את הציור  עשיתי מהתמונה [[הזו|https://www.npr.org/sections/monkeysee/2012/08/25/160004142/alan-ball-on-leaving-true-blood-behind]] של [[אלן בול|http://www.imdb.com/name/nm0050332/?ref_=tt_ov_wr]].
 
 רק לפני שבועיים התוודעתי לקיומו, כי רק לפני שבועיים ראיתי את [[עמוק באדמה]] ממנה כל כך נהניתי, ויומיים אחרי שסיימתי את עמוק, עברתי [[לדם אמיתי|דם אמיתי]] שהיא בידור לא נורמלי. עכשיו אני רואה מידי שבוע פרק של [[כאן ועכשיו|http://www.imdb.com/title/tt5923012/]] וזה הולך ונהיה מעניין. [[ראו את הפשוש|https://www.youtube.com/watch?v=hPhhF-NbUvw]].
-</pre>
+
+&lt;&lt;englink [[alan ball]]&gt;&gt;</pre>
 </div>
 <div created="20170328195137638" modified="20180408083901894" tags="[[אחות כהן]] [[ילדים חד הוריים]] [[אני רוצה להתנצל]]" title="אלפרד">
 <pre>[img[pictures/alfred.jpg]]
@@ -10589,7 +10659,7 @@ well,
 אני מת על [[האחים כהן|איתן וג'ואל כהן]], אבל[[ ביג לבובסקי|http://www.imdb.com/title/tt0118715/]] הוא אבן דרך, ואני מרגיש [[דודיסט|https://www.youtube.com/watch?v=92EChuYNV-M]]. זה מאד עצוב [[שדוני|סטיב בושמי]] מת בסוף, ואז [[הדוד|ג'ף ברידג'ס]]  [[ווולטר|ג'ון גודמן]] הולכים [[לפזר את האפר שלו|https://www.youtube.com/watch?v=Wk61MeDmk2M]].
 </pre>
 </div>
-<div created="20170623150317093" modified="20180208153618091" tags="[[אחיות חוץ]] מוזיקה" title="ביורק">
+<div created="20170623150317093" modified="20191113142933675" tags="[[אחיות חוץ]] מוזיקה" title="ביורק">
 <pre>[img[pictures/bjork.jpg]]
 
 !!![[ראשל]]:
@@ -10615,6 +10685,8 @@ How beautiful to be!
 State of emergency
 
 Is where I want to be
+
+&lt;&lt;englink [[Bjork]]&gt;&gt;
 </pre>
 </div>
 <div created="20161111220614335" modified="20190219161821746" tags="בתים ילדים" title="בית האננס ההוואי של אירי">
@@ -10670,13 +10742,14 @@ Is where I want to be
 3.  עוטפים בניילון נצמד ומקררים כחצי שעה.
 </pre>
 </div>
-<div created="20180326151902676" modified="20180408173546674" tags="[[אחיות חוץ]] מוזיקה" title="ברי סחרוף">
+<div created="20180326151902676" modified="20191113143732898" tags="[[אחיות חוץ]] מוזיקה" title="ברי סחרוף">
 <pre>[img[pictures/berry-sakharof.jpg]]
 
 !!![[יויו]]:
 
 [[זה|http://magazin.org.il/userfiles/DSC_7393.JPG]] [[ברי|https://he.wikipedia.org/wiki/%D7%91%D7%A8%D7%99_%D7%A1%D7%97%D7%A8%D7%95%D7%A3]] שהיה נסיך שבעיקר [[ניגן|https://www.youtube.com/watch?v=qcP_q2kfRCA&amp;list=PLBmjKCWbbNAvbkO0ngXchr31HaV5OtCSl]] והיה למלך שכתב [[על נהר אספירין ישבנו|https://www.youtube.com/watch?v=2LH8kvivV-A]] והלחין את [[אבן גבירול|https://www.youtube.com/watch?v=iSJfAJ0VDN4]] ושר [[מאיר אריאל|https://www.youtube.com/watch?v=yOd4AIP_FSg]] ואין מילים.
-</pre>
+
+&lt;&lt;englink [[berry Sakharof]]&gt;&gt;</pre>
 </div>
 <div created="20170806152634013" modified="20170806192815033" tags="[[אירי טוענת]]" title="ברכת השמש">
 <pre>[img[pictures/birkat-hashemesh.jpg]]
@@ -10759,13 +10832,16 @@ Is where I want to be
 
 כשאלפרד ואני היינו יחד, ונסענו ליער ונפצעתי, ג'וזף דאג לי ולהכל לאורך כל הדרך, ומאז כולנו חיים באושר ועושר.</pre>
 </div>
-<div created="20170415192146343" modified="20190126101923677" tags="[[אחיות חוץ]] סרטים" title="ג'ון אירווינג">
+<div created="20170415192146343" modified="20191113144403291" tags="[[אחיות חוץ]] סרטים" title="ג'ון אירווינג">
 <pre>[img[pictures/john-irving.jpg]]
 
 !!![[גורה]]:
 
 
 [[ג'ון אירווינג|https://he.wikipedia.org/wiki/%D7%92%27%D7%95%D7%9F_%D7%90%D7%99%D7%A8%D7%95%D7%95%D7%99%D7%A0%D7%92]] הוא סופר הנשמה של יויו, והוא עומד בשורה אחת [[כאחות חוץ|אחיות חוץ]], עם [[האחים כהן|איתן וג'ואל כהן]], 
+
+ &lt;&lt;englink [[john irving]]&gt;&gt;
+
 
 
 
@@ -15273,7 +15349,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 </pre>
 </div>
-<div created="20170914191116661" modified="20170929160425052" tags="[[מטא בדיון]]" title="נשמה">
+<div created="20170914191116661" modified="20191113141635243" tags="[[מטא בדיון]]" title="נשמה">
 <pre>[img[pictures/neshama.jpg]]
 
 !!![[נשמה]]:
@@ -15289,7 +15365,8 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 
 
-&lt;&lt;list-links filter:&quot;[tag[נשמה]]&quot;&gt;&gt;
+&lt;&lt;englink [[נשמה]]&gt;&gt;
+
 
 
 </pre>
@@ -17378,7 +17455,7 @@ Fapina''
 
 </pre>
 </div>
-<div created="20181223141707382" modified="20191113131210516" tags="[[כאן בגטו]] מוזיקה [[מטא בדיון]]" title="רדיו epgb">
+<div created="20181223141707382" modified="20191113141725371" tags="[[כאן בגטו]] מוזיקה [[מטא בדיון]]" title="רדיו epgb">
 <pre>[img[pictures/radio-epgb.jpg]]
 
 !![[תומר]]:
