--- a/index.html
+++ b/index.html
@@ -255,8 +255,6 @@ Error message and password prompt
 
 <li>Draft of 'אלן בול'</li>
 
-<li>Draft of 'ביורק'</li>
-
 <li>Draft of 'נשמה'</li>
 
 <li>English</li>
@@ -9169,7 +9167,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[ג'ון אירווינג]] [[ברי סחרוף]] [[Draft of 'ביורק']] [[Draft of 'אלן בול']] [[Draft of 'נשמה']] [[איילה מלאך פיינס]] [[האחיות כהן]]" title="$:/StoryList">
+<div list="ביורק [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9367,36 +9365,6 @@ tootdiv a:visited {text-decoration: none; color: #700}</pre>
 רק לפני שבועיים התוודעתי לקיומו, כי רק לפני שבועיים ראיתי את [[עמוק באדמה]] ממנה כל כך נהניתי, ויומיים אחרי שסיימתי את עמוק, עברתי [[לדם אמיתי|דם אמיתי]] שהיא בידור לא נורמלי. עכשיו אני רואה מידי שבוע פרק של [[כאן ועכשיו|http://www.imdb.com/title/tt5923012/]] וזה הולך ונהיה מעניין. [[ראו את הפשוש|https://www.youtube.com/watch?v=hPhhF-NbUvw]].
 
 &lt;&lt;englink [[alan ball]]&gt;&gt;</pre>
-</div>
-<div created="20170623150317093" draft.of="ביורק" draft.title="ביורק" modified="20191113144331016" tags="[[אחיות חוץ]] מוזיקה" title="Draft of 'ביורק'">
-<pre>[img[pictures/bjork.jpg]]
-
-!!![[ראשל]]:
-
-[[ביורק|https://he.wikipedia.org/wiki/%D7%91%D7%99%D7%95%D7%A8%D7%A7]] היא ממש מגניבה מכל כך הרבה בחינות. את [[האלבום הזה|https://www.youtube.com/watch?v=1iW8hvcIAJQ]], גורה מאד אוהבת.
-
-אני בחרתי לשים כאן עכשיו את [[זה|https://www.youtube.com/watch?v=3ahhieWx7vc]]. אוהבת את השיר ואוהבת את [[הוידאו|מישל גונדרי]].
-
-
-
-Emotional landscapes
-
-They puzzle me
-
-The riddle gets solved
-
-And you push me up to this
-
-State of emergency
-
-How beautiful to be!
-
-State of emergency
-
-Is where I want to be
-
-&lt;&lt;englink [[Bjork]]&gt;&gt;
-</pre>
 </div>
 <div created="20170914191116661" draft.of="נשמה" draft.title="נשמה" modified="20191113141713868" tags="[[מטא בדיון]]" title="Draft of 'נשמה'">
 <pre>[img[pictures/neshama.jpg]]
@@ -10659,7 +10627,7 @@ well,
 אני מת על [[האחים כהן|איתן וג'ואל כהן]], אבל[[ ביג לבובסקי|http://www.imdb.com/title/tt0118715/]] הוא אבן דרך, ואני מרגיש [[דודיסט|https://www.youtube.com/watch?v=92EChuYNV-M]]. זה מאד עצוב [[שדוני|סטיב בושמי]] מת בסוף, ואז [[הדוד|ג'ף ברידג'ס]]  [[ווולטר|ג'ון גודמן]] הולכים [[לפזר את האפר שלו|https://www.youtube.com/watch?v=Wk61MeDmk2M]].
 </pre>
 </div>
-<div created="20170623150317093" modified="20191113142933675" tags="[[אחיות חוץ]] מוזיקה" title="ביורק">
+<div created="20170623150317093" modified="20191113144701713" tags="[[אחיות חוץ]] מוזיקה" title="ביורק">
 <pre>[img[pictures/bjork.jpg]]
 
 !!![[ראשל]]:
