--- a/index.html
+++ b/index.html
@@ -253,10 +253,6 @@ Error message and password prompt
 
 <li>blue-marble-hood</li>
 
-<li>Draft of 'אלן בול'</li>
-
-<li>Draft of 'נשמה'</li>
-
 <li>English</li>
 
 <li>HH</li>
@@ -9167,7 +9163,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="ביורק [[האחיות כהן]]" title="$:/StoryList">
+<div list="[[אלן בול]] [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9353,39 +9349,6 @@ tootdiv a:visited {text-decoration: none; color: #700}</pre>
 אנו שתינו נרגשות - זורקות כפפה על פני המים הגלובליים, ומציעות את הקמת קהילת [[בלו-מארבל-הוד|https://www.youtube.com/watch?v=Hp7OrYaXgb8]], כהתחלה של [[גוף גלובלי|imagine]], אליה יוכלו אנשים ללא הבדלי דת גזע או מגדר לחבור, באם יעמדו בתנאי קבלה שיקבעו. כמו כן, במדינות שיכריזו על עצמן כ-blue marble friendly, וכחלק מהסכמים עם שני הצדדים, יוכלו אנשי המארבל לחיות חיים מלאים.
 
 הרעיון לבלו מארבל הוא המשך למחשבות של אירי על [[הכפר|גלות]].
-</pre>
-</div>
-<div created="20180218104549044" draft.of="אלן בול" draft.title="אלן בול" modified="20191113143631367" tags="[[אחיות חוץ]] סרטים סדרות טלוויזיה" title="Draft of 'אלן בול'">
-<pre>[img[pictures/alan-ball.jpg]]
-
-!!![[גורה]]:
-
-את הציור  עשיתי מהתמונה [[הזו|https://www.npr.org/sections/monkeysee/2012/08/25/160004142/alan-ball-on-leaving-true-blood-behind]] של [[אלן בול|http://www.imdb.com/name/nm0050332/?ref_=tt_ov_wr]].
-
-רק לפני שבועיים התוודעתי לקיומו, כי רק לפני שבועיים ראיתי את [[עמוק באדמה]] ממנה כל כך נהניתי, ויומיים אחרי שסיימתי את עמוק, עברתי [[לדם אמיתי|דם אמיתי]] שהיא בידור לא נורמלי. עכשיו אני רואה מידי שבוע פרק של [[כאן ועכשיו|http://www.imdb.com/title/tt5923012/]] וזה הולך ונהיה מעניין. [[ראו את הפשוש|https://www.youtube.com/watch?v=hPhhF-NbUvw]].
-
-&lt;&lt;englink [[alan ball]]&gt;&gt;</pre>
-</div>
-<div created="20170914191116661" draft.of="נשמה" draft.title="נשמה" modified="20191113141713868" tags="[[מטא בדיון]]" title="Draft of 'נשמה'">
-<pre>[img[pictures/neshama.jpg]]
-
-!!![[נשמה]]:
-
-נפטרתי  לפני  מספר שנים, ולאחר מותי הבנתי, שלעת עתה, זהו מרחב המחייה של נשמתי. לא אוכל להגביה עוף אל מחוזות המקור שלי, ואף אצטרך להיוולד שוב בארץ. 
-
-הייתה לי אפשרות בחירה מסויימת, וביקשתי להיוולד רק אחרי שתסתיים מלחמת העולם הבאה. בקשתי אושרה, ובינתיים אני מסייעת לנשמות שלא רוצות לבוא שוב לעולם הזה, למצוא מקום מיטבי להיוולד בו. כמו כן אני משמשת, כמלאך שומר מחליף מסוג רפאל.
-
-בגלגול האחרון שלי הייתי מטפלת, וזו הנטייה הטבעית שלי. היה לי גלגול נהדר ומלא בכל טוב. הורים נהדרים, משפחה אוהבת, ילדים נפלאים, אהבת גבר, הצלחה מקצועית. הייתי נורא &quot;בסדרית&quot;. דבר אחד לא היה שם ממש - שחרור. אחזתי, שמרתי. הייתי זהירה ומדודה. היה לי קל, כי האמנתי במעשי והייתי חרוצה מאד. בשל אלה, התיקון הבא שלי הוא שחרור ואמונה - וזה גלגול לא פשוט, אך משחרר.
-
-
-
-
-
-
-&lt;&lt;englink [[נשמה]]&gt;&gt;
-
-
-
 </pre>
 </div>
 <div created="20161024110225652" modified="20161024125352292" tags="LTR" title="English">
@@ -10318,7 +10281,7 @@ well,
 [[שרלוק|https://www.imdb.com/title/tt2191671/]] בגרסת [[ג'וני לי מילר|https://www.imdb.com/name/nm0001538/?ref_=tt_cl_t1]], צופה בשבעה מסכים בו&quot;ז, כשמבטו מונח על נקודה דמיונית מעל ובמרכז המסכים, כך שהוא למעשה רואה את כולם, ובאם דבר מה חריג קופץ לעיניו, הוא עוצר את התמונה, ויודע שכאן יש דבר. [[ווטסון|https://www.imdb.com/name/nm0005154/?ref_=tt_cl_t2]] המתוקה משלימה את מילותיו. בקאט הבא הם ידברו על זה עם [[מרקוס|https://www.imdb.com/name/nm3586347/?ref_=tt_cl_t3]] [[וגרגסון|https://www.imdb.com/name/nm0001644/?ref_=tt_cl_t4]], והתעלומה נפתרת או תיפתר ממש בקרוב. סידרה של כייף ליגה.
 &lt;&lt;englink [[Elementary]]&gt;&gt;</pre>
 </div>
-<div created="20180218104549044" modified="20191113142853822" tags="[[אחיות חוץ]] סרטים סדרות טלוויזיה" title="אלן בול">
+<div created="20180218104549044" modified="20191205225744619" tags="[[אחיות חוץ]] סרטים סדרות טלוויזיה" title="אלן בול">
 <pre>[img[pictures/alan-ball.jpg]]
 
 !!![[גורה]]:
@@ -10627,7 +10590,7 @@ well,
 אני מת על [[האחים כהן|איתן וג'ואל כהן]], אבל[[ ביג לבובסקי|http://www.imdb.com/title/tt0118715/]] הוא אבן דרך, ואני מרגיש [[דודיסט|https://www.youtube.com/watch?v=92EChuYNV-M]]. זה מאד עצוב [[שדוני|סטיב בושמי]] מת בסוף, ואז [[הדוד|ג'ף ברידג'ס]]  [[ווולטר|ג'ון גודמן]] הולכים [[לפזר את האפר שלו|https://www.youtube.com/watch?v=Wk61MeDmk2M]].
 </pre>
 </div>
-<div created="20170623150317093" modified="20191113144701713" tags="[[אחיות חוץ]] מוזיקה" title="ביורק">
+<div created="20170623150317093" modified="20191113164612017" tags="[[אחיות חוץ]] מוזיקה" title="ביורק">
 <pre>[img[pictures/bjork.jpg]]
 
 !!![[ראשל]]:
@@ -11906,7 +11869,7 @@ K-SISTER [[לעולם תהיה|HH]] K-SISTER
 
 &lt;&lt;list-links filter:&quot;[tag[האחיות בלות]]&quot;&gt;&gt;</pre>
 </div>
-<div created="20161111215423587" modified="20181023114644931" tags="[[קופים ממונעים]]" title="האחיות כהן">
+<div created="20161111215423587" modified="20191113164818343" tags="[[קופים ממונעים]]" title="האחיות כהן">
 <pre>[img[pictures/coen-sisters.jpg]]
 
 
@@ -11927,6 +11890,8 @@ K-SISTER [[לעולם תהיה|HH]] K-SISTER
 [[שאלון האחיות]]
 
 היו טובים.
+
+&lt;&lt;englink [[Coen Sisters]]&gt;&gt;
 
 
 
@@ -15317,7 +15282,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 </pre>
 </div>
-<div created="20170914191116661" modified="20191113141635243" tags="[[מטא בדיון]]" title="נשמה">
+<div created="20170914191116661" modified="20191205225732716" tags="[[מטא בדיון]]" title="נשמה">
 <pre>[img[pictures/neshama.jpg]]
 
 !!![[נשמה]]:
