--- a/english.html
+++ b/english.html
@@ -267,6 +267,8 @@ Error message and password prompt
 
 <li>logo-bg</li>
 
+<li>Papa Yoel</li>
+
 <li>Radio epgb</li>
 
 <li>soul</li>
@@ -8130,7 +8132,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[John Irving]] [[Berry Sakharof]] [[Coen Sisters]]" title="$:/StoryList">
+<div list="[[Papa Yoel]] [[Coen Sisters]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -8322,8 +8324,7 @@ A soul was born by her inspiration. May she rest in peace.
  &lt;&lt;heblink [[איילה מלאך]]&gt;&gt;</pre>
 </div>
 <div created="20191113143329168" modified="20191113144209430" tags="music [[outer sisters]]" title="Berry Sakharof">
-<pre>
-[img[pictures/Berry-Sakharof.jpg]]
+<pre>[img[pictures/Berry-Sakharof.jpg]]
 
 Yoyo:
 This is Berry, who was a prince that mostly played and became a king who wrote about how we sat near the aspirin river and composed Ibn Gabirol and sang Meir Ariel and no further words.
@@ -8337,8 +8338,7 @@ This is Berry, who was a prince that mostly played and became a king who wrote a
 <pre></pre>
 </div>
 <div created="20191113141855567" modified="20191113143521142" tags="music [[outer sisters]]" title="Bjork">
-<pre>
-[img[pictures/bjork.jpg]]
+<pre>[img[pictures/bjork.jpg]]
 
 !!![[Russell]]:
 
@@ -8356,17 +8356,24 @@ Is where I want to be
 
  &lt;&lt;heblink [[ביורק]]&gt;&gt;</pre>
 </div>
-<div created="20180915085721246" modified="20191113144128621" tags="[[Monkeys with car keys]] [[outer sisters]]" title="Coen Sisters">
+<div created="20180915085721246" modified="20200101125347574" tags="[[Monkeys with car keys]] [[outer sisters]]" title="Coen Sisters">
 <pre>[img[pictures/coen-sisters.jpg]]
 
 !!![[yoyo]]:
 
 Hello,
-In December 2015, 10 days after Gura, Dandan and I moved into the apartment, we had friends over for the Christmas meal. It was a fantastic meal, gummy-a-bearge. I mostly remember me standing there, wobbling , crazy happy with myself.
+
+In December 2015, 10 days after Gura, Dandan and I moved into the apartment, we had friends over for the Christmas meal.
+It was a fantastic meal, gummy-a-bearge. I mostly remember me standing there, wobbling , crazy happy with myself.
+
 For the opening lines, I'm pasting the part where Eva described me standing there, speaking in front of my friends at the 9-side-wishing-star:
-Pretty long time ago, 13-14 years ago, I has this.... phase. I was a huge pothead, and regardless, I've always liked to invent things. One of the things that I invented back then was that I am a basic Hungarian woman, named Eva Coen, and actually as far as I was concerned, I was the sister of Ethan and Joel Coen, the Coen brothers, even though Joel is the name of my father and I don't have any brothers, only four sisters, just like Dr Derek Shepherd. The idea remained and continued to evolve, and with time I decided that I want to establish a group of independent but related creators that will be called Coen sisters. I shared it with Gura, my beautiful little sister. Gura and I have worked for many days, developing the agenda and the characters, the concept and the drama. We wrote a foundation for eight chapters series about the sisters with an option to continue... And why am I telling you this? Because when I arrived to the apartment I realized that that's the launch pad of the sisters, and that's why I built the lab in my sleeping room. And now, for the real thing. I'm inviting each one of you to join the group.  A basic condition for entering the sisters' project is that Saraleh would have liked it. Who is Saraleh? Saraleh is a woman who died due to brain cancer, just like Meir Ariel told on the movie THE CAMPAIGN OF MEIR ARIEL (5:30 minutes into the movie), about a woman who was taken young, and had a very interesting mind, and he wished that she was his literature teacher. He tells about her craziest most brilliant jokes, and about the urge he had to write her a goodbye note on the shloshim, thirty days after she passed, something like a love poem for his teacher that he might even ask her to grade. And who decides whether deceased Saraleh would have liked it or not? The naive thing that I aspire is neither I nor any other sisters' member ever have to behave as a politician, because I'm sure that Saraleh would have not liked it.
+
+Pretty long time ago, 13-14 years ago, I has this.... phase. I was a huge pothead, and regardless, I've always liked to invent things. One of the things that I invented back then was that I am a basic Hungarian woman, named Eva Coen, and actually as far as I was concerned, I was the sister of Ethan and Joel Coen, the Coen brothers, even though Joel is the name of my father and I don't have any brothers, only four sisters, just like [[Dr Derek Shepherd|https://en.wikipedia.org/wiki/Derek_Shepherd#/media/File:Dr._Derek_Shepherd.jpgD7.AA_.D7.91.D7.A1.D7.93.D7.A8.D7.94]]. The idea remained and continued to evolve, and with time I decided that I want to establish a group of independent but related creators that will be called Coen sisters. I shared it with Gura, my beautiful little sister. Gura and I have worked for many days, developing the agenda and the characters, the concept and the drama. We wrote a foundation for eight chapters series about the sisters with an option to continue... And why am I telling you this? Because when I arrived to the apartment I realized that that's the launch pad of the sisters, and that's why I built the lab in my sleeping room. And now, for the real thing. I'm inviting each one of you to join the group.  A basic condition for entering the sisters' project is that Saraleh would have liked it. Who is Saraleh? Saraleh is a woman who died due to brain cancer, just like Meir Ariel told on the movie [[THE CAMPAIGN OF MEIR ARIEL|https://www.youtube.com/watch?v=yFXUEoXCkT8]] (5:30 minutes into the movie), about a woman who was taken young, and had a very interesting mind, and he wished that she was his literature teacher. He tells about her craziest most brilliant jokes, and about the urge he had to write her a goodbye note on the shloshim, thirty days after she passed, something like a love poem for his teacher that he might even ask her to grade. And who decides whether deceased Saraleh would have liked it or not? The naive thing that I aspire is neither I nor any other sisters' member ever have to behave as a politician, because I'm sure that Saraleh would have not liked it.
+
 Or like Gura and I wrote back then, when I lived between the oaks:
+
 The sisters' questionnaire
+
 Be good. 
 
 
@@ -8382,8 +8389,7 @@ Sherlock, in the Jonny Lee Miller version, watches seven screens at the same tim
 &lt;&lt;heblink [[אלמנטרי]]&gt;&gt;</pre>
 </div>
 <div created="20191113143908637" modified="20191113144254373" tags="[[outer sisters]] films" title="John Irving">
-<pre>
-[img[pictures/john-irving.jpg]]
+<pre>[img[pictures/john-irving.jpg]]
 
 !!![[Gura]]:
 
@@ -8394,6 +8400,25 @@ John Irving is the soul writer of Yoyo, and he stands in one line as an outer si
 </div>
 <div _canonical_uri="pictures/newbg-dark.jpg" created="20170607193119061" modified="20170607230143664" tags="" title="logo-bg" type="image/jpeg">
 <pre></pre>
+</div>
+<div created="20200101125351383" modified="20200101130606402" tags="" title="Papa Yoel">
+<pre>
+[img[pictures/aba-vetirza.jpg]]
+
+!!![[Yoyo]]:
+
+Our dad,Yoel Bauman, ever since our mother passed away, comes in one piece with his dear -truly dear- wife,Tirza Bauman, who shows up with a wide smile and great chocolate chip cookies.
+ 
+I really like Tirza, who turned him to a far more tolerable and tolerant man than how he ever used to be.
+
+All and all dad is just another human being who's afraid of this life, and for that, I can't blame anyone.
+
+He did his best at raising us as good people, and in most cases he even succeeded. 
+
+
+
+
+ &lt;&lt;heblink [[אבא יואל]]&gt;&gt;</pre>
 </div>
 <div created="20190226093702127" modified="20191113120521333" tags="[[Here in the Ghetto]] Music Metafiction" title="Radio epgb">
 <pre>[img[pictures/radio-epgb.jpg]]
