--- a/index.html
+++ b/index.html
@@ -9163,7 +9163,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[האחיות כהן]]" title="$:/StoryList">
+<div list="[[אבא יואל]] [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9183,7 +9183,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20191217070026780" title="$:/temp/search">
+<div created="20161023184814872" modified="20200101130012641" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -9506,7 +9506,7 @@ well,
 
 ברור לי שאני לא אמור לקדם רשתות, אבל בהמלצת חבר, כאבי הגב שלי הובילו אותי לחנות [[הזאת|https://patuah.co.il/he/b/weshoes-%D7%91%D7%99%D7%90%D7%9C%D7%99%D7%A7-3-%D7%AA%D7%9C-%D7%90%D7%91%D7%99%D7%91--u10499]], שבביאליק 3, ואחרי שקניתי לי זוג נעלי hoka חייזריות אצל המוכרת הנהדרת, אני מוכרח להמליץ מכל בחינה.</pre>
 </div>
-<div created="20170608165812345" modified="20180502192555710" tags="[[משפחת באומן]] [[נאמני הגנזך]]" title="אבא יואל">
+<div created="20170608165812345" modified="20200101130830783" tags="[[משפחת באומן]] [[נאמני הגנזך]]" title="אבא יואל">
 <pre>[img[pictures/aba-vetirza.jpg]]
 
 !!![[יויו]]:
@@ -9521,7 +9521,8 @@ well,
 
 
 
-</pre>
+
+&lt;&lt;englink [[Papa Yoel]]&gt;&gt;</pre>
 </div>
 <div created="20171205174328432" modified="20171207165459321" tags="[[הנחלה בה גדלתי]]" title="אבינו">
 <pre>[img[pictures/avinu.jpg]]
@@ -11869,7 +11870,7 @@ K-SISTER [[לעולם תהיה|HH]] K-SISTER
 
 &lt;&lt;list-links filter:&quot;[tag[האחיות בלות]]&quot;&gt;&gt;</pre>
 </div>
-<div created="20161111215423587" modified="20191113164818343" tags="[[קופים ממונעים]]" title="האחיות כהן">
+<div created="20161111215423587" modified="20200101130759678" tags="[[קופים ממונעים]]" title="האחיות כהן">
 <pre>[img[pictures/coen-sisters.jpg]]
 
 
