--- a/english.html
+++ b/english.html
@@ -273,6 +273,8 @@ Error message and password prompt
 
 <li>soul</li>
 
+<li>Yoyo</li>
+
 </ul>
 </p>
 
@@ -8132,7 +8134,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[Papa Yoel]] [[Coen Sisters]]" title="$:/StoryList">
+<div list="Yoyo [[Papa Yoel]] [[Coen Sisters]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -8401,13 +8403,13 @@ John Irving is the soul writer of Yoyo, and he stands in one line as an outer si
 <div _canonical_uri="pictures/newbg-dark.jpg" created="20170607193119061" modified="20170607230143664" tags="" title="logo-bg" type="image/jpeg">
 <pre></pre>
 </div>
-<div created="20200101125351383" modified="20200101130606402" tags="" title="Papa Yoel">
+<div created="20200101125351383" modified="20200101133049907" tags="" title="Papa Yoel">
 <pre>
 [img[pictures/aba-vetirza.jpg]]
 
 !!![[Yoyo]]:
 
-Our dad,Yoel Bauman, ever since our mother passed away, comes in one piece with his dear -truly dear- wife,Tirza Bauman, who shows up with a wide smile and great chocolate chip cookies.
+Our dad, Yoel Bauman, ever since our mother passed away, comes in one piece with his dear - truly dear- wife,Tirza Bauman, who shows up with a wide smile and great chocolate chip cookies.
  
 I really like Tirza, who turned him to a far more tolerable and tolerant man than how he ever used to be.
 
@@ -8441,6 +8443,23 @@ In my last metamorphosis I was a therapist, and it is my natural tendency. I had
 
 
  &lt;&lt;heblink [[נשמה]]&gt;&gt;</pre>
+</div>
+<div created="20200101132642919" modified="20200101133516550" tags="" title="Yoyo">
+<pre>
+[img[pictures/yoyo.jpg]]
+
+ !!![[Iry]]:
+
+For me Yoyo was, first of all, Gura's beloved brother, who I met in the beginning of middle school.
+
+Now, he's my god. I believe him, I believe in him, I believe in what he believes, I adore him, I love him, I like him, I thank him every day, I am assisted by him, I listen to him, I love his taste and his mind, and I always want to be around the table when he dines.
+
+He can freak out when people say: passing episode or permanent ritual. He gets sick if people are late. He bluffs himself.  Yesterday he told me that I should pay attention, that even though I am self-aware I'm minding my own ass. He told us couple of weeks before David Bowie's death that by BLACK STAR he already knew he's going to die, and you can hear it in every possible way.
+
+Actually, I didn't know David Bowie well before Yoyo became part of my daily life, meaning this last year.
+
+
+ &lt;&lt;heblink [[יויו]]&gt;&gt;</pre>
 </div>
 
 </div>
