--- a/index.html
+++ b/index.html
@@ -9163,7 +9163,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[אבא יואל]] [[האחיות כהן]]" title="$:/StoryList">
+<div list="יויו [[אבא יואל]] [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9183,7 +9183,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20200101130012641" title="$:/temp/search">
+<div created="20161023184814872" modified="20200101133539288" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -9506,7 +9506,7 @@ well,
 
 ברור לי שאני לא אמור לקדם רשתות, אבל בהמלצת חבר, כאבי הגב שלי הובילו אותי לחנות [[הזאת|https://patuah.co.il/he/b/weshoes-%D7%91%D7%99%D7%90%D7%9C%D7%99%D7%A7-3-%D7%AA%D7%9C-%D7%90%D7%91%D7%99%D7%91--u10499]], שבביאליק 3, ואחרי שקניתי לי זוג נעלי hoka חייזריות אצל המוכרת הנהדרת, אני מוכרח להמליץ מכל בחינה.</pre>
 </div>
-<div created="20170608165812345" modified="20200101130830783" tags="[[משפחת באומן]] [[נאמני הגנזך]]" title="אבא יואל">
+<div created="20170608165812345" modified="20200101133645815" tags="[[משפחת באומן]] [[נאמני הגנזך]]" title="אבא יואל">
 <pre>[img[pictures/aba-vetirza.jpg]]
 
 !!![[יויו]]:
@@ -11870,7 +11870,7 @@ K-SISTER [[לעולם תהיה|HH]] K-SISTER
 
 &lt;&lt;list-links filter:&quot;[tag[האחיות בלות]]&quot;&gt;&gt;</pre>
 </div>
-<div created="20161111215423587" modified="20200101130759678" tags="[[קופים ממונעים]]" title="האחיות כהן">
+<div created="20161111215423587" modified="20200101131057436" tags="[[קופים ממונעים]]" title="האחיות כהן">
 <pre>[img[pictures/coen-sisters.jpg]]
 
 
@@ -13075,7 +13075,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 [[וזה הכל בינתיים|https://www.youtube.com/watch?v=ixl8xKyv-8E&amp;index=3&amp;list=PLXhoL6TJUCjYLAo1mw50eUrj5JrdEEoqC]] (בינתיים זה הכל)</pre>
 </div>
-<div created="20161026214908307" modified="20180720170719716" tags="[[נאמני הגנזך]] [[אחות כהן]] [[משפחת באומן]] [[אירי טוענת]]" title="יויו">
+<div created="20161026214908307" modified="20200101133711605" tags="[[נאמני הגנזך]] [[אחות כהן]] [[משפחת באומן]] [[אירי טוענת]]" title="יויו">
 <pre>!!![[אירי]]:
 
 [img[pictures/yoyo.jpg]]
@@ -13090,7 +13090,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 לא מספיק הכרתי, למעשה, את דיוויד בואי עד שיויו הפך לחלק מחיי היומיום שלי, כלומר בשנה האחרונה.
 
  
-</pre>
+&lt;&lt;englink [[Yoyo]]&gt;&gt;</pre>
 </div>
 <div created="20170522202441678" modified="20180125165822572" tags="[[אחות כהן]] [[נאמני הגנזך]] [[אני רוצה להתנצל]]" title="יויו וגורה">
 <pre>[img[pictures/yoyo-ve-gura.jpg]]
